WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114466
InjectedBundleNodeHandle::imageForRect doesn't respect device scale factor or highlighting option
https://bugs.webkit.org/show_bug.cgi?id=114466
Summary
InjectedBundleNodeHandle::imageForRect doesn't respect device scale factor or...
Tim Horton
Reported
2013-04-11 14:33:48 PDT
<
rdar://problem/13508513
>
Attachments
patch
(2.78 KB, patch)
2013-04-11 14:38 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-04-11 14:38:55 PDT
Created
attachment 197673
[details]
patch
Tim Horton
Comment 2
2013-04-11 14:50:43 PDT
http://trac.webkit.org/changeset/148238
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug