InjectedBundleNodeHandle::imageForRect doesn't respect device scale factor or highlighting option https://bugs.webkit.org/show_bug.cgi?id=114466 <rdar://problem/13508513>

Reviewed by Simon Fraser.

Respect the device scale factor when creating the snapshot image.
Clear the snapshot image before drawing into it.
Respect SnapshotOptionsExcludeSelectionHighlighting.

* WebProcess/InjectedBundle/DOM/InjectedBundleNodeHandle.cpp:
(WebKit::imageForRect):


Canonical link: https://commits.webkit.org/132850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148238 268f45cc-cd09-0410-ab3c-d52691b4dbfc